--- a/_posts/2000-01-02-歌词合集.md
+++ b/_posts/2000-01-02-歌词合集.md
@@ -38,6 +38,45 @@ FF8片头曲。跟烂大街的Eyes on Me相比，拉丁文显然更有范儿。
 <hr>
 2016-05-28
 
+# Get Wild
+
+来自City Hunter的OVA。
+
+# 2B or not 2B
+
+本来想来个莎士比亚Rap系列，结果光有2B成份了。
+
+# Kat Rap ( Kitty Really Hits )
+
+模仿The Garfield Rap的作品，并没有实际录制。
+
+# Age of Metal
+
+歌词完成度很高，我都忘了为什么没录制了。
+
+# 无题1
+
+模仿Busta Rhymes风格的作品。
+
+# CET系列
+
+把大学英语单词Rap化的神器系列，实际只录制了第一首的第一段，后来用来搭配好朋友胡剑的3D室内漫游作品。当时是我首次使用Adobe Premiere，之前都是用Flash做MV的。
+
+# 命运之子
+
+和前文有重复，回头整理一下，删除其中的一个。
+
+# MA2 (Maths Attacks Again)
+
+我个人比较喜欢的作品。
+
+# She's My Whole World
+
+记不清了。
+
+<hr>
+2016-06-05
+
 # When Maths Strikes (Warcraft III Credit Theme)
 
 ```
@@ -1189,3 +1228,1440 @@ Remember me? (Vinosec)
 Remember me? (Maths attacks again!)
 Remember me? (Everyone goes insane!)
 ```
+
+# Get Wild
+
+```
+Get my car rushing over the road
+Get my soul away from the drakness
+Just let my body drift away and my brain empty
+Fearing the attack from tomorrow
+It's your pain or my pain or somebody's pain
+As long as live for someone
+It's your dream or my dream or somebody's dream
+Then there's nothing I'm afraid of
+
+Get wild and tough
+Play the puzzle game of love that can't be done lonely
+Get wild and tough
+I don't wanna show myself in the soft city
+Get chance and luck
+There must be someone that can be with you only
+Get chance and luck
+To heal the broken dream e'en I'm loney
+
+Kiss with the light of the car
+She's dancing just in the wind
+Consider the cold night as dance floor
+Talk and laugh with bursting tear
+It's your pain or my pain or somebody's pain
+As long as care about somebody
+It's your dream or my dream or somebody's dream
+Then of course can be more stronger
+
+Get wild and tough
+Get wild and tough
+Get chance and luck
+Get...
+
+
+名侦探CONAN ——瞳孔中的凶杀案
+
+若是这世上没有污渍
+	我们便可坦诚相爱
+		为何时光要分开
+
+因为有你
+	我变得更坚强
+		誓言的戒指闪闪发光耀丽夺目
+
+你我都了解
+	即使再小的梦想
+		你是唯一填满我心的人
+就因为有你
+	我变得更坚强
+		誓言的戒指闪闪发光耀丽夺目
+
+	YOU will realize
+		即使再小的梦想
+	Ah... YOU are the ONE
+		梦想终有实现的一天
+
+
+你我都了解
+	即使再小的梦想
+		你是唯一填满我心的人
+就因为有你
+	我变得更坚强
+		誓言的戒指闪闪发光耀丽夺目
+
+	YOU will realize
+		即使再小的梦想
+	Ah... YOU are the ONE
+		梦想终有实现的一天
+
+
+黑夜里一面在柏油路上疯狂飞驰
+一面大声呼唤又一面冲进黑暗
+即使任意让刺激将自己麻醉
+我也没有勇气迎接明天的来临
+It's your pain or my pain
+or somebody's pain
+如果只能够爱护我身边的某人
+It's your dream or my dream
+or somebody's dream
+为她交付我的身心
+
+Get wild and tough
+你我和她
+独自涂抹着完成不了的爱情的画
+Get wild and tough
+让我走吧
+身在都市我的心却在浪迹天涯
+Get chance and luck
+放眼红尘
+世上总有一个你才能保护的她
+Get chance and luck
+这就出发
+即使受伤也不能放弃梦中的话
+
+跟车的灯接吻后				冰冷夜空半醉城市华丽舞台
+那个女子在马路上起舞			那个女子就在车灯中翩翩起舞
+把冰冷的夜空做舞台			内心悲伤还一直在纵声谈笑
+一直悲伤的在说笑			世上谁还真正在乎明天的来临
+It's your pain or my pain or somebody's pain
+如果能够爱护某人			如果只是为心中的某人而生存
+It's your dream or my dream or somebody's dream
+那便一定能坚强起来			那便是最坚强的人
+
+Get wild and tough
+Get wild and tough
+Get chance and luck
+Get chance ...
+
+黑夜里一面在柏油路上疯狂飞驰
+一面大声呼唤又一面冲进黑暗
+即使任意让刺激将自己麻醉
+我也没有勇气迎接明天的来临
+
+It's your pain or my pain
+or somebody's pain
+如果只能够爱护我身边的某人
+It's your dream or my dream
+or somebody's dream
+为她交付我的身心
+
+Get wild and tough
+你我和她
+独自涂抹着完成不了的爱情的画
+Get wild and tough
+让我走吧
+身在都市我的心却在浪迹天涯
+Get chance and luck
+放眼红尘
+世上总有一个你才能够保护的她
+Get chance and luck
+这就出发
+即使受伤也不能放弃梦中的话
+
+冰冷夜空半醉城市华丽舞台
+那个女子就在车灯中翩翩起舞
+内心悲伤还一直在纵声谈笑
+世上谁还真正在乎明天的来临
+
+It's your pain or my pain
+or somebody's pain
+如果只是为心中的某人而生存
+It's your dream or my dream
+or somebody's dream
+那便是最坚强的人
+
+Get wild and tough
+Get wild and tough
+Get chance and luck
+Get chance ...
+```
+
+# 2B or not 2B
+
+```
+Report in, everyone!
+Here comes Shakespear's Hamlet
+One of the greatest tragedy in human's history
+
+get to it, yea let's get to it
+all my comrades let's get to it
+yea get to it let's get to it
+all my comrades all my companies let's get to it
+
+All my comrades let's get to it
+Get to it, yea let's get to it!
+All my companies let's get to it
+Yea yea... Hamlet, you are the best...
+
+
+Who can tell me who am I
+You think I am soso or bad
+No matter what, I'll survive...
+I am hamlet and I said:
+
+
+To be, or not to be, that is the quesion:
+whether 'tis nobler in the mind to suffer
+the slings and arrows of outrageous fortune
+or to take arms against a sea of troubles,
+
+and by opposing end them. (To die -- to sleep --)
+no more; and by a sleep to say we end
+the heartache, and the thousand natural shocks
+that flesh is heir to. 'tis a consummation
+
+devoutly to be wished. to die -- to sleep.
+to sleep -- perchance to dream: ay, there's the rub!
+for in that sleep of death what dreams may come
+when we have shuffled off this mortal coil,
+
+must give us pause. there's the respect
+that makes calamity of so long life.
+For who would bear the whips and scorms of time,
+the oppressor's wrong, the proud man's contumely,
+
+
+the pangs of despised love, the law's delay,
+the insolence of office, and the spurns
+that patient merit of the unworthy takes,
+when he himself might his quietus make
+
+with a bare bodkin? Who would fardels bear,
+to grunt and sweat under a weary life,
+but that the dread of something after death --
+the undiscovered conuntry, from whose bourn
+
+no traveller returns -- puzzles the will,
+and makes us rather bear those ills we have
+than fly to others that we know not of?
+Thus conscience does make cowards of us all,
+
+and thus the native hue of resolution
+is sicklied o'er with the pale cast of thuoght,
+and enterprises of great pith and moment
+with this regard their currents turn away
+
+
+and lose the name of action. -- Doft you now!
+The fair Ophelia! -- Nymph, in my orisons
+be all my sins rememb'red.
+```
+
+```
+2B or not 2B
+
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 1 1 1 1
+1 1 1 1 ...
+
+4 4 4 8 8 4 8
+
+74 - 148 -144-18
+
+Hey, yall
+It's so dark outside
+I can't find my way
+so that i'm lost
+to be or not to be?
+well that's a question
+a motherfucking question
+no it's not
+for me it's a disaster
+
+well hamlet  said that  to be or not to be  that is the question
+that's what they say  when they  wanna throw  a sham protection
+oh fuck'em damn it  a question  is that  if you should be a rapper
+let me tell you  to be or not to be  that is  a motherfucking disaster
+then to be, not to be? that is cheat, when i sleep
+don't tease me, don't ease me, let me see, let me be!
+suckers (suckers) lawyers (lawyers) officeholder motherfucker
+let me tell you to be or not to be that is a motherfucking disaster
+
+well hamlet  said that  to be or not to be  that is the question
+that's what they say  when they  wanna throw  a sham protection
+oh fuck'em damn it  a question  is that  if you should be a rapper
+let me tell you  to be or not to be  that is  a motherfucking disaster
+then to be, not to be? that is cheat, when i sleep
+don't tease me, don't ease me, let me see, let me be!
+suckers (suckers) lawyers (lawyers) officeholder motherfucker
+let me tell you to be or not to be that is a motherfucking disaster
+
+To be, 
+	or not to be, 
+that is 
+	the quesion:
+whether 
+	'tis nobler 
+in the mind 
+	to suffer
+
+the slings 
+	and arrows 
+of outrageous 
+	fortune
+or to 
+	take arms 
+against 
+	a sea of troubles,
+
+and by 
+	opposing 
+end 
+	them. 
+To die -- 
+	to sleep --
+no 
+	more; 
+
+and by 
+	a sleep 
+to say 
+	we 
+end
+	the heartache, 
+and the 
+	thousand 
+
+natural 
+	shocks
+that flesh 
+	is heir to. 
+'tis a 
+	consummation
+devoutly 
+	to be wished. 
+
+to die -- 
+	to sleep.
+to sleep -- 
+	perchance to dream: 
+ay, 
+	there's the rub!
+for 
+	in that 
+
+sleep 
+	of death 
+what dreams 
+	may come
+when 
+	we have 
+shuffled 
+	off this 
+mortal 
+	coil,
+
+must give 
+	us pause. 
+there's the 
+	respect
+that makes 
+	calamity 
+of so long 
+	life.
+For who 
+	would bear 
+the whips 
+	and storms of time,
+de oppressor
+	is wrong, 
+the proud man's 
+	contumely,
+
+
+the pangs 
+	of despised love, 
+the law's 
+	delay,
+de insolence 
+	of office, 
+and the 
+	spurns
+that patient 
+	merit of 
+de unworthy takes,
+	when he 
+himself 
+	might 
+his quietus 
+	make
+
+with a 
+	bare bodkin? 
+Who would 
+	fardels bear,
+to grunt 
+	and sweat 
+under a 
+	weary life,
+but that 
+	the dread of 
+something 
+	after death --
+de undiscovered 
+	country, 
+from whose 
+	bourn
+no traveller 
+	returns -- 
+puzzles 
+	the will,
+and makes us 
+	rather bear 
+those ills 
+	we have
+than 
+	fly to 
+others 
+	that 
+we know 
+	not of?
+Thus 
+	conscience 
+does make 
+	cowards 
+of us 
+	all,
+
+and thus 
+	the native 
+hue of 
+	resolution
+is sicklied 
+	of her 
+with the 
+	pale 
+cast of 
+	thought,
+and 
+	enterprises 
+of great 
+	pith 
+and 
+	moment
+with this 
+	regard 
+their currents 
+	turn away
+
+
+and lose the name 
+	of action. -- 
+Doft you now!
+	The fair Ophelia! -- 
+Nymph, 
+	in my orisons
+be all my sins 
+	remembered.
+
+_______________________________________________________
+
+To be, 	or not to be, that is the quesion: whether 'tis nobler in the mind to suffer the slings and arrows of outrageous fortune or to take arms against a sea of troubles, and by opposing end them. To die -- to sleep -- no more; and by a sleep to say we end the heartache, and the housand natural shocks that flesh is heir to. 'tis a consummation devoutly to be wished. to die -- to sleep. to sleep -- perchance to dream: ay, there's the rub! for in that sleep of death what dreams may come when we have shuffled off this mortal coil, must give us pause. there's the respect that makes calamity of so long life. For who would bear the whips and scorms of time, the oppressor's wrong, the proud man's contumely, the pangs of despised love, the law's delay, the insolence of office, and the spurns that patient merit of the unworthy takes, when he himself might his quietus make with a bare bodkin? Who would fardels bear, to grunt and sweat under a weary life, but that the dread of something after death -- the undiscovered conuntry, from whose bourn no traveller returns -- puzzles the will, and makes us rather bear those ills we have than fly to others that we know not of? Thus conscience does make cowards of us all, and thus the native hue of resolution is sicklied o'er with the pale cast of thuoght,
+and enterprises of great pith and moment with this regard their currents turn away and lose the name of action. -- Doft you now! The fair Ophelia! -- Nymph, in my orisons be all my sins rememb'red.
+
+To be, 
+	or not to be, 
+that is 
+	the quesion: 
+whether 
+	'tis nobler 
+in the mind 
+	to suffer 
+the slings 
+	and arrows 
+of outrageous 
+	fortune or to take arms against a sea of troubles, and by opposing end them. To die -- to sleep -- no more; and by a sleep to say we end the heartache, and the housand natural shocks that flesh is heir to. 'tis a consummation devoutly to be wished. to die -- to sleep. to sleep -- perchance to dream: ay, there's the rub! for in that sleep of death what dreams may come when we have shuffled off this mortal coil, must give us pause. there's the respect that makes calamity of so long life. For who would bear the whips and scorms of time, the oppressor's wrong, the proud man's contumely, the pangs of despised love, the law's delay, the insolence of office, and the spurns that patient merit of the unworthy takes, when he himself might his quietus make with a bare bodkin? Who would fardels bear, to grunt and sweat under a weary life, but that the dread of something after death -- the undiscovered conuntry, from whose bourn no traveller returns -- puzzles the will, and makes us rather bear those ills we have than fly to others that we know not of? Thus conscience does make cowards of us all, and thus the native hue of resolution is sicklied o'er with the pale cast of thuoght,
+and enterprises of great pith and moment with this regard their currents turn away and lose the name of action. -- Doft you now! The fair Ophelia! -- Nymph, in my orisons be all my sins rememb'red.
+```
+
+```
+tell me the way, i'm gonna go
+throw it to thee, don't play fool
+
+here you go, go for broke
+throw it to me don't play fool
+tell me the way, i shall follow
+nothing's gonna in my way cuz i'm leo
+
+wow, woe
+one cannot / live without / some pretty / romantic dream
+
+wow, woe
+but don't stay / being high go / ahead make the / dream fulfil
+
+prepare your chivalry put on your bravery get thee rescue
+
+that is okay make it easy act it stupid play it crazy
+```
+
+# Kat Rap ( Kitty Really Hits )
+
+```
+(intro)
+
+Meow-
+
+c'mon ppl
+na' let's go
+it's a rap i know you know now
+
+get it down
+bring it on
+kitty really hits the kat rap (bounce!)
+
+(verse 1)
+
+don't be talkin
+just be walkin
+to be a cat that's what you're doin
+wander in the street
+nothing's by my side
+cuz i'm just a guest of the modern tired
+
+(kitty really hits)
+i have nothing to worry about like you humans do
+(kitty really hits)
+let me give you a suggestion that brace yourself
+
+c'mon let me tell you baby that's so cool being a cat
+
+(verse 2)
+
+(aiyyo) what's goin' on
+why you foolin' 'round?
+stand against the sociaty you know you ain't a chance
+hey give it up
+and be thyself
+drop the cool shit away c'mon cat ain't a top
+
+(kitty really hits)
+enjoy the orcs i love the awesome warcraft iii
+(kitty really hits)
+so i will be grateful for "we cats are free"
+
+c'mon let me tell you baby that's so cool being a cat
+```
+
+# Age of Metal
+
+```
+Written by Lew York for Super Art Studio, compused by James Grote for Quake III Rocket Arena
+Rapped by Lew York
+Rap and background voice: Lew York
+Special thanks: James Grote's "Alienation 64" for Q3RA; Friedrich Nietzsche's "Thus Spake Zarathustra"
+__________
+Recorded by Super Art Studio
+
+Intro: Super Art Studio... Age of METAL
+
+
+We are now living in the age of metal
+steel knee iron fist mind unbreakable
+we are in prison ain't nowhere to go
+have no right sociaty takes the control
+
+need go for broke liberate my soul
+face the heck of sucker my word is no
+rushing at night need no one know
+spirit is boiled just go go go
+
+contempt is in the eyes of the criminal
+filthy judge dirty jury pale
+deadly goodness I'm gonna throw
+Need fatal madness instead of evil
+
+insaneness is justice and gospel
+hope virtue can earn the dream fulfiled
+standing in front of cliff by the rail
+but don't need anything right through your will
+
+
+
+contempt is in the eyes of the criminal
+filthy judge dirty jury pale
+deadly goodness I'm gonna throw
+Need fatal madness instead of evil
+
+We are now living in the age of metal
+steel knee iron fist mind unbreakable
+we are in prison ain't nowhere to go
+have no right sociaty takes the control
+
+nowhere to go
+
+lost the control
+
+age of metal
+
+unbreakable
+
+    (come on, baby)
+
+insaneness is justice and gospel
+hope virtue can earn the dream fulfiled
+standing in front of cliff by the rail
+but don't need anything right through your will
+
+need go for broke liberate my soul
+face the heck of sucker my word is no
+rushing at night need no one know
+spirit is boiled just go go go
+
+    (heh heh... aaow!)
+
+treble of soul
+
+ain't no stereo
+
+broke bass note
+
+go and overload
+
+
+treble of soul
+
+ain't no stereo
+
+broke bass note
+
+go and overload
+
+
+nowhere to go
+
+lost the control
+
+age of metal
+
+unbreakable
+
+
+nowhere to go
+
+lost the control
+
+age of metal
+
+unbreakable
+
+(ad-lib fade out)
+```
+
+# 无题1
+
+```
+1
+1
+1
+1
+...
+1
+1
+1
+1
+lalala
+1
+1
+1
+let me shock the sociaty
+that always gets me down, yall
+that brought so many motha-fucker
+that gets genius drown, yall
+that makes sucker rules
+that weaks won the strong, yall
+that makes hentaiz and bitches
+that ain't nowhere to found, yall
+
+come on you mother fuckers
+come on you fallen niggaz
+come on hentaiz and bitches
+come together my friends let's sheet the holy pussies
+
+
+one cannot be a child forever
+
+
+throw your hands real high, yall
+get your e'L real high, yall
+shit you can't deny, yall
+don't lie yall, don't try yall
+all my hentaiz inside yall
+let's start that shit yall
+so hurry up bitches and gentlemen
+let's give 'em a shock, yall
+
+all my gonna do is to exceed
+exceed here and there
+exceed today and tomorrow
+exceed thy and myself
+```
+
+# CET系列
+
+```
+CET 6 new words A1
+
+verse 1
+
+i bet you can't ABIDE the world anymore
+but you show me being ABNORMAL ain't a fault
+i think it's absurd to abolish the law		i think ABLOLISHING the law sure is ABSURD
+but you say ABUNDANCE of ACADEMIES need no door
+i call it an ACCESSORY while you say it's a fantasy
+my ACCOMMODATING you with lodging will be terminated
+"ACKNOWLEDGED!" ya gonna go but why ask me 4 battery
+now i shall ACQUAINT you with your doomed destiny
+
+all my hentaiz stay cool with your ACQUISITION
+just ACTIVATE your hentai situation
+how you dual with that ACUTE frastration
+ADHERE and prepare ADJACENT consternation
+ADJOIN the ADJUSTABLE ADMINISTER
+so you ADOLESCENT should be look after
+my ADOPTION of harmony is a new chapter
+i ADORE my fucking GOD that's the way of survivor
+
+chorus
+
+so et needs a cet
+better count on 1, 2, 3
+on the ADVENTAGEOUS cet
+can it feed both thee and me? (c'mon)
+
+come on people hop you hip
+super art pops hot shit
+big boy lucien said to thee
+armageddon, cet c'mon
+
+verse 2
+
+hold your breath we've waiting for the ADVENT
+shoot to heath it's gonna to be ADVERSE
+ADVERTISEING should always be damned and cursed
+the ADROCATES you'd study from those kind nurses
+hey! that AERO smith is on the AERIAL
+they say the AEROSPACE is ABSOLUTE AESTHETICAL
+the AFFILIATE of you never outta control
+and i'll AFFIRM he is that smooth criminal
+
+my GENDA always try to AGGRAVATE me
+your AGITATION also bring me AGONY
+are you AGREEABLE you dirty paparazzi
+from my ALBUMS youj've got my privacy
+
+chorus
+
+starcraft, red alert, cet
+ALGEBRA is not 1, 2, 3
+ALIENS ALLEGE cet
+can it feed both thee n' me? c'mon
+
+
+CET 6 expressions A
+
+Intro
+
+come to me, shake that shit
+come on all my hentaiz let us tease
+all my hentaiz, all my bitches
+come on all my people let's cet
+
+verse 1
+
+ABIDE BY horde, ACCORD WITH milord
+i'll never outta accord with chief of my own accord
+ACCOUNT FOR hot shit, make it acquainted
+with you bitch don't PUT ON AN ACT pop that shit
+	collage english test
+if ya ADDICT TO success then hold its breath
+	collage english test
+yes it's a bomber IN ADVANCE it's been set
+be AGREE WITH an english shit that's collage english test
+
+verse 2
+
+LEAVE IN THE AIR, make it ON THE ALERT
+don't you ever close your eyes BE ALIVE TO DIRT
+keep movin' all out, for all that (meow)
+enter into (an) alliance with me scream n' shout
+	c e t
+be in alliance with majority you have no choice
+	c e t
+now make amends to 'em for your invading that pussy
+BY ANALOGY you know aimin' high is collage english test
+
+(chorus: superart shows cet) 
+
+cet, cet
+let me show you 1, 2, 3
+shake that shit, thee and me,
+super art hold that cet
+	bounce the cet
+the whole entire shit is cet
+	pop the cet
+make allowances for your invading that pussy	c'mon leo c'mon lucien let us tease
+hey aiming high is fucking equal to c e t	c'mon all my people fuck that cet
+
+verse 3
+
+make amends to her, for make it hurt
+by analogy you should have known it's whose shirt
+on the analogy, of my destiny
+she won't make an appeal to her mummy
+	c e t
+i'm applyin' my mind to know what she said
+	c e t
+to protect oneself ain't apply to the war hammar
+but it does approach to the collage english test
+
+chorus 2
+
+throw hands yall, real high yall
+get you e'L make it high yall
+hot shit yall, can't deny yall
+all my hentaiz start that sheet yall
+	all my hentaiz c'mon
+pop that pussy til you get it down c'mon
+	all my bitches c'mon
+bounce your ballz til you bring it on c'mon
+fuck the collage english test all my ppl c'mon
+
+verse iv
+
+assert thyself, brace thyself
+avail yourself of anything to be thyself
+it's of no avail, n' to little avail
+to have kind n' mercy it's to no avail
+	c e t
+on the average the world is wild so be ready to fight
+	c e t
+step back down it's somehow the best way to make it right
+don't get back out of the fucking collage english test
+
+endin': cet
+
+cet, cet
+cet six isn't an ease
+hop that hip, pop and rap
+cet isn't that tough
+	c e t
+come on come on come on come on ya the best
+	pal, hail2u!!
+yes yall yes yall it's only a while:
+let me tell you super art that's my style!
+(chorus: superart shows cet) 
+
+cet, cet
+let me show you 1, 2, 3
+shake that shit, thee and me,
+super art hold that cet
+	bounce the cet
+the whole entire shit is cet
+	pop the cet
+let's break down that motherfucking cet
+c'mon all my people fuck that cet
+
+
+CET 6 expressions B1
+
+intro
+
+c'mon all the mutha' fucker who feels like me,
+now let's shoot that fuckin' cet yea right now bitch...
+
+verse I
+
+c'mon hentaiz BACK me UP
+ON THE BASIS OF coin-op
+BEAR DOWN bitches fuck 'em up
+BEAR DOWN ON 'em suck 'em up
+c'mon bitches don't BEAR OFF
+let my hentaiz BEAR you UP
+that IS BENEFICIAL TO us, yup
+so that we can BE BETTER OFF
+
+verse II
+
+why ARE we TO BLAME FOR those nuts
+that is BEing  BLIND TO super art
+don't you TURN A BLIND EYE TO the fact
+corruptions are IN BLOSSOM that really sux
+if i BLOW OVER i'll BLOW UP
+also MAKE BOLD TO BOMB OUT
+i will BE BOUND FOR the nile
+passion grows BY LEAPS AND BOUNDS
+
+verse III
+
+you KNOW NO BOUNDS of my ablility
+WITHIN THE BOUNDS OF this galaxy
+you can BREAK IN ON my speech
+but i'll BREAK OUT INTO scream
+i'll never BREAK UP i say to thee
+if you let me CATCH MY BREATH
+HOLD YOUR BREATH you'll LOSE YOUR BREATH
+my hip-hop can BRING FORTH peace
+
+chorus "CET"
+
+cet BRINGS FORWARD (hot) shit
+also BRING IT INTO CONTACT WITH thee
+you can BRING OFF cet
+it will BRING ON your destiny
+let me BRING OVER cet
+then i'll BRING YOU UNDER cet
+
+outro
+
+why not BRUSH OFF cet?
+or you can BURN DOWN cet
+cet is See E.T.
+cet is ...
+
+(ad-lib fade out)
+```
+
+# 命运之子
+
+```
+点燃梦的誓约，我的孩子
+这里没有摇篮
+点燃梦的誓约，命运的孩子
+不要将梦扰乱
+
+起来吧
+去寻找真理的花园
+
+
+用那真理的火焰
+燃尽世上的邪恶
+用那真理的火焰
+将世上阴影驱散
+
+再见，孩子
+记住命运的誓言
+
+
+Children of Fate
+
+我的孩子
+这里没有摇篮
+命运的孩子
+不要将梦扰乱
+
+用那真理的火焰
+燃尽世上的邪恶
+用那真理的火焰
+将世上阴影驱散
+
+点燃梦的誓约
+这里没有摇篮
+点燃梦的誓约
+不要将梦扰乱
+
+起来吧，我的孩子
+去寻找真理花园
+
+再见，我的孩子
+记住命运的誓言
+去寻找真理花园 ～
+
+Liberi Fatali
+
+Fithos
+fitos
+
+Lusec
+luse
+
+Wecos
+wikos
+
+Vinosec
+vinose
+
+Excitate vow e somno, liberi mei. 	Kindle a vow from dreams, my children,
+esitate  vo se somo   liberi mei
+ 
+Cunae non sunt.  			There are no cradles. 
+kuna  ne  su
+
+Excitate vow e somno, liberi fatali.	Kindle a vow from dreams, children of fate 
+esitate  vo se somo   libeta fali		
+  
+Somnus non eat. 			Let not dreams go [away].
+some   so  iso
+
+
+Surgite.  				Get up.
+su nife nife nife
+
+Invenite hortum veritatis.		Go find the garden of truth.
+hutu	 hutu	veritatis
+hutu	 hutu	veritatis
+
+
+Ardente veritate  			With flaming truth 
+tadiente veritate	
+
+Urite mala mundi.  			burn away the evils of the world. 
+uruite mala mudi
+
+Ardente veritate			With flaming truth
+tadienti veritate	 
+
+Incendite tenebras mundi. 		set fire to the shadows of the world.
+inkedite  teba sodi
+
+
+Valete, liberi,  			Farewell, children
+valete  liberi
+
+Diebus fatalibus.			on these fateful days.
+dibes  fatalibus
+
+
+Liberi Fatali
+
+Fithos
+fitos
+
+Lusec
+luse
+
+Wecos
+wikos
+
+Vinosec
+vinose
+
+Excitate vow e somno, liberi mei. 	Kindle a vow from dreams, my children,
+esitate  vo se somo   liberi mei
+
+Cunae non sunt.  			There are no cradles. 
+kuna  ne  su
+
+Excitate vow e somno, liberi fatali.	Kindle a vow from dreams, children of fate 
+esitate  vo se somo   libeta fali		
+  
+Somnus non eat. 			Let not dreams go [away].
+some   so  iso
+
+
+Ardente veritate  			With flaming truth 
+tadiente veritate	
+
+Urite mala mundi.  			burn away the evils of the world. 
+uruite mala mudi
+
+Ardente veritate			With flaming truth
+tadienti veritate	 
+
+Incendite tenebras mundi. 		set fire to the shadows of the world.
+inkedite  teba sodi
+
+
+Valete, liberi,  			Farewell, children
+valete  liberi
+valete li- beri-
+
+Diebus fatalibus.			on these fateful days.
+dibes  fatalibus
+```
+
+# MA2 (Maths Attacks Again)
+
+```
+Written by Dr. Doom
+Composed by Capcom (aka Special Ending Theme of Bio Hazard 2)
+Performanced by Leo
+Recorded by Super Art Studio
+
+(intro)
+(voice with echo)
+everytime when i'm alone
+i always think that
+that one should has his own way..
+so am i free?
+no i don't think so..
+'cause i can't change the things i did
+and i can't change the way i am..
+what is reality?
+what is life?
+you know sometimes
+we have to bear and suffer
+but is that really right?
+a lot of people asked me
+that if i'm afraid of maths
+of course i'm afraid of maths
+in my darkest hour
+in my deepest despair
+i'm threatened, and abondaned
+i'm the damned, and in frastration
+when the motherfuckin' mathematics attacks again~
+
+(chorus rap)
+maths attacks again
+you should run ASA can
+maths attacks again
+you cannot just stand
+maths attacks again
+everyone goes insane
+you ain't gotta no plan
+but you better ask jordan
+
+(rap1)
+when maths attacks again you should run as soon as you can
+cause you know you may lose you whole entire friends and clan
+when maths attacks again you know everyone goes insane
+but don't just stand you jordan form can give you some plan
+
+(chorus)
+when maths attacks again, you should run asa can
+when maths attacks again, everyone goes insane
+
+(rap2)
+when maths attacks again you should run as fast as you can
+cause you know mathematical attack will only curse and damn
+when maths attacks again you you should go and ask jordan
+break my cd forget my lyric blame my hiphop just gone insane
+
+(chorus2)
+when maths attacks again, you should run afa can
+when maths attacks again, everyone goes insane
+
+(verse2)
+have you been to the intersecton between bad and evil?			ou
+i have, i were once invertible that's why i were chose
+i used to think that a creator must be an annihilator first		er
+but now i realized that the basis of the world is an operator
+somebody told me it's good to keep being positive definite		i
+while others suggested that it's better to be skew-symmetric
+what will happen when HJT transposed with Bullshit?			i
+no one knows but it must be an interesting cyclic
+
+what's the characteristic space of the whole entire world?		o:
+remember that relying on your companion matrix must be a fault
+let's give WJB a diagonalizaton of normal function 			shen
+but people and the government will never have an equivalence relation
+you have many ideals but what's your primary ideal?			il
+i dunno but most of these ideals are considerd unreal
+wet piss hot shit ain't no important inner product			a
+but why pussy and your dick ain't give matrix cool blast?	
+
+(chorus)
+when maths attacks again, you should run asa can
+when maths attacks again, everyone goes insane
+
+(interrap)
+so cauchy never let me be, won't let me be me or let me see
+bonnet beats down my MTV, you got hot shit without me
+bernoulli hiphop hops hip, bessel has inequality
+my mtv clip may make you sleep, it's really hot shit with my piss
+
+(verse3)
+you know a coset of an empty set is also an empty set				e
+so JZM with three watchs doesn't mean he's not mad
+stay in a finite-dimensional algebraically water closet				e
+you'll find the coolest one of common divisor is the greatest
+i'm not a good guy at all i don't think jordan is cool				u
+even in Euclidean space i insist THAT my life is for ner'zul
+lorents has no ring cuz he's a homosexual group					u
+that's psendo-orthogonal but it's really a good school
+
+(voice)
+everytime when i'm alone
+i always think that
+that one should has his own way..
+so am i free?
+no i don't think so..
+'cause i can't change the things i did
+and i can't change the way i am..
+when the motherfuckin' mathematics attacks again~
+
+(rap3)
+when maths attacks again you should run as soon as you can
+cause you know you may lose you whole entire friends and clan
+when maths attacks again you know everyone goes insane
+but don't just stand you jordan form can give you some plan
+
+(chorus)
+when maths attacks again, you should run asa can
+when maths attacks again, everyone goes insane
+when maths attacks again, you should run afa can
+when maths attacks again, everyone goes insane
+
+(chorus rap)
+maths attacks again
+you should run ASA can
+maths attacks again
+you cannot just stand
+maths attacks again
+everyone goes insane
+you ain't gotta no plan
+but you better ask jordan
+
+(outro)
+when mathematical attack again
+
+
+
+MA2 2nd Remix
+
+I really want everybody listen to the words of this song, yall
+
+everytime when i'm alone
+i always think that
+that one should has his own way..
+so am i free?
+no i don't think so..
+'cause i can't change the things i did
+and i can't change the way i am..
+what is reality?
+what is life?
+you know sometimes that
+we have to bear and suffer
+but is that really fair?
+a lot of people asked me
+that if i'm afraid of maths
+of course i'm afraid of maths
+in my darkest hour
+in my deepest despair
+i'm threatened, and abondaned
+i'm the damned, and in frastration
+when the motherfuckin' mathematics attacks again~
+
+
+Maths attacks again
+don't stop man, rabbit ran
+maths attacks again
+you'll get shit out if you only stand
+maths attacks again
+everyone goes insane
+i'm gonna tell you what
+(will happen ) if you don't give a damn
+
+when maths attacks again you should run as the rabbit ran
+let me tell you nuts you'll get motherfucking piss out if you only stand
+when maths attacks again you know everyone goes insane
+fuck you guys for the rest of your asshole you can only give a damn
+
+when maths attacks again
+you should run n' give a damn
+when maths attacks again
+everyone goes insane
+
+when maths attacks again you should run as fast as you can
+cause you know mathematical attack will only give curse and commination
+when maths attacks again you know there ain't no any safe zone
+break my cd forget my lyric blame my music just gone insane
+
+when maths attacks again
+you should run n' give a damn
+when maths attack again
+everyone goes insane
+
+Maths attacks again
+like the rabbit you ought to run
+maths attacks again
+you'll get shit out if you only stand
+maths attacks again
+everyone goes insane
+i gonna tell you nuts
+you can only give a damn
+
+time outta mind one of my best friend told me he loved maths
+next year he became a softhead, the 3rd year he's gone mad and the 4th year he's dead
+the doctors opened his head with a big bad zigzag falchion
+they found out that his head was choked up by a lot of rotten catkin
+aiyyo damn, as a matter of course i'm threatened after that case, man
+for sure that ain't quaint if you know my major here is also maths
+the courses make me scratch my head over and wanna kill someone
+but hey, i know i'm still reasonable, i didn't do that shit for the nonce!
+nonetheless i used to be a maths fan when i was in junior one
+until one day my teacher told me I flunked my maths and the mark was twenty-seven
+my apologize i forgot what happened cause too much blood rushed suddenly into my head
+when i was conscious then i just found some pieces of corpse, and i got 'em eaten!
+
+when maths attacks again
+you should run n' give a damn
+when maths attack again
+everyone goes insane
+
+Maths attacks again
+like the rabbit you ought to run
+maths attacks again
+you'll get shit out if you only stand
+maths attacks again
+everyone goes insane
+i gonna tell you nuts
+you can only give a damn
+
+do you know why there are so many motherfuckering people wasting their time? 
+I do know, the reason is they don't always get their own mind with 'em
+"sometimes naive", they have been infected by their professors with diplomaism
+actually they should know that the only thing they need to follow is their own footstep
+you can get some hot shit from the legendary Busta Rhymes
+or you can learn how to be yourself by listen to that motherfucker, Eminem
+before you give a fuck you should know that under other's control is not cool
+believe in that you can make it true, now this place is maths' tomb!
+
+
+A lot of people asked me
+Stupid fucking questions
+a lot of people think
+i should get down straight to hell
+well i don't do pop music
+i don't do rap music
+i just do fuck music
+when the motherfuckin' mathematics attacks again..
+
+when maths attacks again you should run as fast as you can
+cause you know mathematical attack will only give curse and commination
+when maths attacks again you know everyone goes insane
+fuck you guys for the rest of your asshole you can only give a damn
+
+when maths attacks again
+you should run n' give a damn
+when maths attacks again
+everyone goes insane
+
+when maths attacks again
+you should run n' give a damn
+when maths attacks again
+everyone goes insane
+
+Maths attacks again
+like the rabbit you ought to run
+maths attacks again
+you'll get shit out if you only stand
+maths attacks again
+everyone goes insane
+i gonna tell you nuts
+you can only give a damn
+
+when mathematica attacks again
+
+i'm gonna tell you nuts
+here ain't no any safe zone
+```
+
+# She's My Whole World
+
+```
+sometimes i keep  on thinking she  herself is a  magic for me
+or how can she  fill up all the  whole entire  heart of me
+her happiness,  vitanity  make up all my  thought daily
+look at her face,  what a ferly!  all my daydreams  is that maybe
+
+i always tell  myself that  all i want is  all the whole vvelt
+(but) "the world is not  enough unless  you could get her"  so said my id!
+i am not free  i know i have  fell into her  jail already
+(it) doesn't matter  think about it  because that I  am knowingly!
+
+she's my whole world....
+
+
+it ain't easy -  i am afraid,  i am nervous,  hesitated
+i dunno how  to make it happen  i haven't taught  by my teacher
+i cannot help  callin' 'em shit  for the courses  they have taught me
+why didn't they  teach me
+
+Hello
+you think you are free after all? hah...
+well, stupidity always brings forth happness
+
+
+There are so  many people  confidences  are overflow
+
+intro
+verse 1
+chorus
+verse 2
+verse 1
+verse 1
+verse 1
+
+
+hi yall
+fuck all
+think you're free anyway? suckers!
+you can never get outta the jail
+
+there are so many people
+end their life happily
+
+
+the world is just one big bad shit
+we can never get 
+
+
+for you asshole
+check your role
+i think you should know
+what is your goal
+
+come on come on come on
+everybody come on
+listen to my new song
+
+sometimes i suspect
+if i, myself am bad
+i don't really think so
+but the fuckin' world makes me sad
+```
+
+
+
+
+
+
+
+
+
+
