--- a/_posts/2017-04-18-关于人民的名义原著小说的一点批评.md
+++ b/_posts/2017-04-18-关于人民的名义原著小说的一点批评.md
@@ -14,17 +14,22 @@ categories: 文学批评
 说实话，我没想到自己现在性格这么刻薄，可能是上了岁数，变成了满腹牢骚的中老年人。上次看的书是《红与黑》，当时觉得简直是一无是处，不过可能是翻译不好的缘故。这次看《人民的名义》，发现原来自己已经很难去欣赏别人的优秀了。周梅森是老派政治小说作者，虽然名字有趣（总让我想起写律师Perry Mason的《梅森探案集》，这套书我很喜欢），但我一直没有读过。按理说他的作品，质量是有保证的，但我读书的时候，心里还是忍不住各种吐槽；或者也可以叫文学批评。
 
 ```
-吕西安脑子里装满了小团体的朋友们的观念，说道：“天哪！可是真正的批评，神圣的批评在哪里呢？”
+吕西安脑子里装满了小团体的朋友们的观念，
+说道：“天哪！可是真正的批评，神圣的批评
+在哪里呢？”
 ——巴尔扎克《幻灭》，"第三种书店老板"
 ```
 
 周梅森文字还算一般流畅，不至于像翻译的外国文，但对比以商业题材为主，偶有涉及政治的钟道新，文笔还是过于朴实。很多老作家都是这样，对于八九十年代热门的知青乡土军旅三大题材来说，没有任何问题，但政治小说涉及当代城市题材，就显得有些粘滞了。我不是做论文，懒得去摘其中的段落具体分析，但举例子的思路都在我脑子里，随手翻翻就能找到例证。钟道新的小说趣味十足，各种段子层出不穷，周梅森的题材更沉重，文字滞涩一些倒也不是大缺点。只不过当作者偶尔想要调节一下气氛的时候，会让我想起某人关于“风趣”的高论。
 
 ```
-他主张作人作文都该有风趣。可惜他写的又象中文又象日文的“大东亚文”，达不
-出他的风趣来，因此有名地“耐人寻味”。袁友春在背后曾说，读他的东西，只觉
-得他千方百计要有风趣，可是风趣出不来，好比割去了尾巴的狗，把尾巴骨乱转
-乱动，办不到摇尾巴讨好。
+他主张作人作文都该有风趣。可惜他写的又
+象中文又象日文的“大东亚文”，达不出他的
+风趣来，因此有名地“耐人寻味”。袁友春在
+背后曾说，读他的东西，只觉得他千方百计
+要有风趣，可是风趣出不来，好比割去了尾
+巴的狗，把尾巴骨乱转乱动，办不到摇尾巴
+讨好。
 ——钱钟书《猫》
 ```
 
@@ -34,10 +39,11 @@ categories: 文学批评
 
 结构上，《人民的名义》中规中矩，埋坑填坑基本流畅自然，对于他这种老资格的长篇小说作家来说，可谓轻车熟路。但凡是要加入大转折，一般就会显得太过刻意。这点柯南道尔、阿加莎克里斯蒂之类的侦探小说家能玩的很溜，毕竟人家就是吃这碗饭的，但别的作家就未必能搞定了。侦探小说中前半本好人，后半本坏蛋这种写法，拿给其他作家，最差的就是像金庸的《笑傲江湖》里的岳不群一样，前后不一，bug无数。周梅森不是写连载的，不至于犯这种低级错误，但还是太过刻意了。肤浅的人看到高育良黑化的时候大概会觉得震撼，但对早就知道会黑化，只是不知道作者会如何揭晓的我来说，只会觉得揭露的手法太简单粗暴，有一种钦点的味道。什么，你问我是不是看过预告知道人物的结局？别傻了，那帮人里有人是黑的还用说么，凶手永远是我们之中的一个人啊同学，而且真相永远只有一个。
 
-这么说好像是显得我嫌坑埋的不够多，确实也有这个意思，好的情节发展应该是像剥笋一样，慢慢揭露真相，而不是跟处理猪腰子一样，一切两半直接开挖。但是即便如此，本书中最恶俗的坑，当属靶场里关于决斗的戏言。当时我就想，尼玛千万别把这个当伏笔，契诃夫的段子早就被用烂了，而且就算是硬来那个也算是戏剧理论而不是文学理论……就算当伏笔，也千万别真的让公案厅长不忍开枪，不然我一定会写读后感，哦不对是严肃的文学批评吐槽周梅森老大爷的。结果呢，喏，就是这样。
+这么说好像是显得我嫌坑埋的不够多，确实也有这个意思，好的情节发展应该是像剥笋一样，慢慢揭露真相，而不是跟处理猪腰子一样，一切两半直接开挖。但是即便如此，本书中最恶俗的坑，当属靶场里关于决斗的戏言。当时我就想，尼玛千万别把这个当伏笔，契诃夫的段子早就被用烂了，而且就算是硬来那个也算是戏剧理论而不是文学理论……就算当伏笔，也千万别真的让公安厅长不忍开枪，不然我一定会写读后感，哦不对是严肃的文学批评吐槽周梅森老大爷的。结果呢，喏，就是这样。
 
 ```
-写一出戏剧，如果第一幕出现了一支挂在墙上的枪，那么这支枪在后面一定要开火。（大意）
+写一出戏剧，如果第一幕出现了一支挂在墙上的
+枪，那么这支枪在后面一定要开火。（大意）
 ——著名剧作家（不是斯坦尼斯拉夫斯基的）契诃夫
 ```
 
@@ -56,12 +62,14 @@ categories: 文学批评
 2、有这么一段分集剧情：
 
 ```
-沙瑞金让陈岩石给他讲讲大风厂事件，陈岩石说那都是腐败结的
-恶果，山水集团的高小琴白手起家，几年时间就达到了几百亿资
-产，如果不是高小琴和丁义珍关系好，她就拿不到大风厂的地，
-高小琴用五千万得到了大风厂价值十亿的地，其中工人们的股份
-占到百分之四十。沙瑞金听完很吃惊地表示，这分明就是强取豪
-夺，所以工人才闹事。
+沙瑞金让陈岩石给他讲讲大风厂事件，陈岩石说
+那都是腐败结的恶果，山水集团的高小琴白手起
+家，几年时间就达到了几百亿资产，如果不是高
+小琴和丁义珍关系好，她就拿不到大风厂的地，
+高小琴用五千万得到了大风厂价值十亿的地，其
+中工人们的股份占到百分之四十。沙瑞金听完很
+吃惊地表示，这分明就是强取豪夺，所以工人才
+闹事。
 ```
 
 一股浓浓的屌丝气味透了出来。这点原著里根本就不是这么处理的，有兴趣请看原著，反正周梅森再没水平也不会写出这种情节。周梅森不敢把政治斗争写成黑吃黑，但是也不至于把阶级对立写成工人永远正确，资本家就是巧取豪夺，不过again，这也是为了取悦屌丝观众，没办法。
@@ -69,9 +77,10 @@ categories: 文学批评
 3、原著中没有直接露脸的丁义珍，在电视剧里（据说，我没看）被塑造成了一个亮点，again据说是根据某官员真实故事改编的。我之前说过了，真实世界中，想出逃的大概都能成功，出逃成功的大概都能过上有钱有闲的生活，人家的苦恼只有“哎呀我没全力不能随意操妈罚跪了”，加上研究研究引渡条例啥的。这种情节不过是为了让屌丝舒服，你看你贪了这么多，跑出去也担惊受怕，何苦呢。我一个月两千块钱挺好的。但其实，出逃官员千千万，去餐馆刷盘子的，不过区区一人而已。
 
 ```
-既有如此跳圈之狂热，则像那种操操他的妈，或罚罚他的跪，不
-但不是侮辱，简直是一种异数。 有些人在子孙圈之外徘徊流涕，
-想自己的妈被操，想跪上一年半载，还没有人肯下手哩。
+既有如此跳圈之狂热，则像那种操操他的妈，
+或罚罚他的跪，不但不是侮辱，简直是一种异
+数。有些人在子孙圈之外徘徊流涕，想自己的
+妈被操，想跪上一年半载，还没有人肯下手哩。
 ——柏杨《浊世人间》
 ```
 
