--- a/_posts/2017-04-18-关于人民的名义原著小说的一点批评.md
+++ b/_posts/2017-04-18-关于人民的名义原著小说的一点批评.md
@@ -74,14 +74,14 @@ categories: 文学批评
 
 一股浓浓的屌丝气味透了出来。这点原著里根本就不是这么处理的，有兴趣请看原著，反正周梅森再没水平也不会写出这种情节。周梅森不敢把政治斗争写成黑吃黑，但是也不至于把阶级对立写成工人永远正确，资本家就是巧取豪夺，不过again，这也是为了取悦屌丝观众，没办法。
 
-3、原著中没有直接露脸的丁义珍，在电视剧里（据说，我没看）被塑造成了一个亮点，again据说是根据某官员真实故事改编的。我之前说过了，真实世界中，想出逃的大概都能成功，出逃成功的大概都能过上有钱有闲的生活，人家的苦恼只有“哎呀我没全力不能随意操妈罚跪了”，加上研究研究引渡条例啥的。这种情节不过是为了让屌丝舒服，你看你贪了这么多，跑出去也担惊受怕，何苦呢。我一个月两千块钱挺好的。但其实，出逃官员千千万，去餐馆刷盘子的，不过区区一人而已。
+3、原著中没有直接露脸的丁义珍，在电视剧里（据说，我没看）被塑造成了一个亮点，again据说是根据某官员真实故事改编的。我之前说过了，真实世界中，想出逃的大概都能成功，出逃成功的大概都能过上有钱有闲的生活，人家的苦恼只有“哎呀我没权力不能随意操妈罚跪了”，加上研究研究引渡条例啥的。这种情节不过是为了让屌丝舒服，你看你贪了这么多，跑出去也担惊受怕，何苦呢。我一个月两千块钱挺好的。但其实，出逃官员千千万，去餐馆刷盘子的，不过区区一人而已。
 
 ```
 既有如此跳圈之狂热，则像那种操操他的妈，
 或罚罚他的跪，不但不是侮辱，简直是一种异
 数。有些人在子孙圈之外徘徊流涕，想自己的
 妈被操，想跪上一年半载，还没有人肯下手哩。
-——柏杨《浊世人间》
+——柏杨《闻过则怒集》
 ```
 
 总之，结论就是，书就算有再多缺点，比电视剧也知道高到哪里去了。颤抖吧改编党们。（咦，说好的严肃的文学批评呢，怎么变成喷子的节奏了？）
