--- a/_posts/2017-05-17-天津直达长滩岛欢乐半自由行.md
+++ b/_posts/2017-05-17-天津直达长滩岛欢乐半自由行.md
@@ -7,7 +7,7 @@ categories: 广告
 
 # 长滩岛欢乐半自由行
 
-![天津直飞](asset/pic/tj-boracay.jpg "天津直达长滩岛")
+![天津直飞](/asset/pic/tj-boracay.jpg "天津直达长滩岛")
 
 帮朋友做个广告，并写个对子，祝他：
 
